Tools/WebKitTestRunner/TestController.cpp
@@ -397,7 +397,8 @@ void TestController::initialize(int argc, const char* argv[])
         0, // shouldGoToBackForwardListItem
         0, // didRunInsecureContentForFrame
         0, // didDetectXSSForFrame 
-        0  // didNewFirstVisuallyNonEmptyLayout 
+        0, // didNewFirstVisuallyNonEmptyLayout
+        0, // willGoToBackForwardListItem
     };
     WKPageSetPageLoaderClient(m_mainWebView->page(), &pageLoaderClient);
 }
